@@ -278,6 +278,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/configdialog.{cpp,h}: add "no record" support for OS X (through
       PulseManager.)
     - src/configdialog.cpp: whitespace only.
+    - src/onmainwindow.{cpp,h}: hook PulseManager in - for both OS X and
+      Windows.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
